--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
     
         <label id="dice">how many sides?</label>
-       <br><br>
+        <br><br>
+    <select name="dieOption" id="dieOption">
+        <option value="die6" id="dice6">6</option>
+        <option value="die10" id="dice10">10</option>
+    </select>
+        
 
         <p id="dicelable">1</p>
         <button type="button" onclick="rollDice6()">Roll Dice</button>
